# face-landmarking-and-retrieval

./: README.md  Raport_tehnic_Boscan_Tiberiu-Ioan.odt  backup.txt  face-landmarking-and-retrieval.ipynb  main.py  pyproject.toml
